<resources>
    <string name="system_detail_default_title">System</string>
    <string name="system_detail_missing_system">This system is no longer available.</string>
    <string name="system_detail_no_datastreams">No datastreams are available for this system.</string>
    <string name="system_detail_datastream">Datastream</string>
    <string name="system_detail_location">Location</string>
    <string name="system_detail_video">Video</string>
    <string name="system_detail_ptz_controls">PTZ controls</string>
    <string name="system_detail_absolute_position">Absolute position</string>
    <string name="system_detail_pan">Pan</string>
    <string name="system_detail_tilt">Tilt</string>
    <string name="system_detail_zoom">Zoom</string>
    <string name="system_detail_live">Live</string>
    <string name="system_detail_paused">Paused</string>
    <string name="system_detail_disconnected_with_error">Disconnected: %1$s</string>
    <string name="system_detail_waiting_for_observations">Waiting for observations…</string>
    <string name="system_detail_receiving_observations">Receiving observations</string>
    <string name="system_detail_disconnected">Disconnected</string>
    <string name="system_detail_ptz_control">PTZ control</string>
    <string name="system_detail_tilt_up">Tilt up</string>
    <string name="system_detail_tilt_down">Tilt down</string>
    <string name="system_detail_pan_left">Pan left</string>
    <string name="system_detail_pan_right">Pan right</string>
    <string name="system_detail_zoom_out">Zoom out</string>
    <string name="system_detail_zoom_in">Zoom in</string>
    <string name="system_detail_video_stream">Video stream</string>
    <string name="system_detail_pause_video">Pause video</string>
    <string name="system_detail_play_video">Play video</string>
    <plurals name="system_detail_value_count">
        <item quantity="one">%d value</item>
        <item quantity="other">%d values</item>
    </plurals>
    <string name="app_name">OSH Android</string>
    <string name="hello_world">Configure settings and tap the play button to start SmartHub</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start SmartHub</string>
    <string name="action_stop">Stop SmartHub</string>
    <string name="action_status">App Status</string>
    <string name="action_test_connection">Test Connection</string>
    <string name="action_about">About</string>
    <string name="action_proxy">Start Proxy</string>
    <string name="action_stop_proxy">Stop Proxy</string>
    <string name="action_meshtastic">Meshtastic Msg</string>
    <string name="sensor_android">Android Sensor</string>
    <string name="sensor_angel">Angel Health Monitor</string>
    <string name="sensor_meshtastic">Meshtastic Radio</string>
    <string name="sensor_wardriving">Wardriving</string>
    <string name="sensor_polar">Polar Heart Monitor</string>
    <string name="sensor_kestrel">Kestrel Weather Meter</string>
    <string name="sensor_controller">USB Controller</string>
    <string name="sensor_trupulse">TruPulse Range Finder</string>
    <string name="sensor_flirone">Flirone</string>
    <string name="sensor_ste">STE Radiation Pager</string>
    <string name="sensor_template">Template</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_magnetometer">Magnetometer</string>
    <string name="sensor_orientation_quat">Orientation (Quaternions)</string>
    <string name="sensor_orientation_euler">Orientation (Euler Angles)</string>
    <string name="sensor_gps">GPS Location</string>
    <string name="sensor_network_location">Network Location</string>
    <string name="sensor_video">Video Data</string>
    <string name="sensor_video_roll">Video Roll</string>
    <string name="sensor_audio">Audio</string>
    <string name="device_name">Device Name</string>
    <string name="device_ip_address">Device IP Address</string>
    <string name="server_profiles">Configured Nodes</string>
    <string name="manage_servers">Manage Nodes</string>
    <string name="services">Services on this device</string>
    <string name="enable_sos_service">SOS Service</string>
    <string name="enable_csapi_service">Connected Systems Service</string>
    <string name="enable_discovery_service">Discovery Service</string>
    <string name="summary_push_options">Options for pushing data</string>
    <string name="summary_csapi">OGC standard REST API serving this device’s sensor data.</string>
    <string name="summary_sos">Legacy API serving sensor data as XML over HTTP</string>
    <string name="summary_discovery">Service providing discovery based on definable rulesets</string>
    <string name="summary_select_device">Tap to select or enter device address</string>
    <string name="pref_uid_extension">Sensors UID Extension</string>
    <string-array name="video_codec_list">
        <item>JPEG</item>
        <item>H264</item>
        <item>H265</item>
        <item>VP9</item>
        <item>VP8</item>
    </string-array>
    <string-array name="video_framerate">
        <item>24</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="video_resolution_list">
        <item>24</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string-array name="orientation_angle_list">
        <item>Quaternion</item>
        <item>Euler</item>
    </string-array>
    <string-array name="orientation_angle_values">
        <item>QUATERNION</item>
        <item>EULER</item>
    </string-array>
    <string-array name="orientation_angle_defaults">
        <item>QUATERNION</item>
    </string-array>
    <string-array name="location_type_list">
        <item>GPS</item>
        <item>Network</item>
    </string-array>
    <string-array name="location_type_values">
        <item>GPS</item>
        <item>NETWORK</item>
    </string-array>
    <string-array name="location_type_defaults">
        <item>GPS</item>
    </string-array>
    <string-array name="sos_option_list">
        <item>Fetchable</item>
        <item>Store Locally</item>
        <item>Push Remote</item>
    </string-array>
    <string-array name="sos_option_values">
        <item>FETCH_LOCAL</item>
        <item>STORE_LOCAL</item>
        <item>PUSH_REMOTE</item>
    </string-array>
    <string-array name="sos_option_defaults">
        <item>PUSH_REMOTE</item>
    </string-array>
    <string name="trupulse_device_name">Trupulse Device Name</string>
    <string-array name="trupulse_datasource_list">
        <item>Streaming Physical Device</item>
        <item>Simulate Virtual Device</item>
    </string-array>
    <string-array name="trupulse_datasource_values">
        <item>STREAM</item>
        <item>SIMULATED</item>
    </string-array>
    <string name="trupulse_datasource_default">STREAM</string>
    <string-array name="spot_report_feature_type_list">
        <item>Select Reporting Item</item>
        <item>Street Closure</item>
        <item>Flooding</item>
        <item>Medical</item>
        <item>Aid</item>
    </string-array>
    <string-array name="ble_location_method_list">
        <item>Nearest Beacon</item>
        <item>Trilateration</item>
    </string-array>
    <string-array name="ble_location_method_values">
        <item>NEAREST</item>
        <item>TRILATERATION</item>
    </string-array>
    <string-array name="ble_location_method_defaults">
        <item>NEAREST</item>
    </string-array>
    <string-array name="spot_report_location_source_list">
        <item>GPS</item>
        <item>Laser Range Finder</item>
        <item>Network</item>
    </string-array>
    <string name="spot_report">Spot Report</string>
    <string name="spot_name_field">NAME:</string>
    <string name="spot_description_field">DESCRIPTION:</string>
    <string name="spot_take_image_button">CAPTURE</string>
    <string name="spot_reset_image_button"> RESET </string>
    <string name="spot_submit_report_button">SUBMIT REPORT</string>
    <string name="spot_name_description">A name for the report</string>
    <string name="spot_report_radius">Radius:</string>
    <string name="spot_report_latitude">Lat:</string>
    <string name="spot_report_longitude">Lon:</string>
    <string name="spot_report_ft">Ft.</string>
    <string name="spot_report_closure_type">Type:</string>
    <string-array name="spot_report_action_items">
        <item>Select...</item>
        <item>Open</item>
        <item>Close</item>
    </string-array>
    <string name="spot_report_action">Action:</string>
    <string name="spot_report_id">Ref. Id:</string>
    <string-array name="spot_report_flood_feature_type">
        <item>Select...</item>
        <item>Channel Drainage</item>
        <item>Land Surface</item>
    </string-array>
    <string-array name="spot_report_observation_modes">
        <item>Select...</item>
        <item>Meter</item>
        <item>Visual</item>
        <item>Model</item>
    </string-array>
    <string name="spot_report_flood_feature">Feature Type:</string>
    <string name="spot_report_depth">Depth:</string>
    <string name="spot_report_observation_mode">Obs. Mode:</string>
    <string name="spot_report_med_sign">Describe Medical Condition...</string>
    <string name="spot_report_med_value">Enter measurement (BP, Temp, etc.)...</string>
    <string name="spot_report_med_emergency">Emergency (T/F)</string>
    <string-array name="spot_report_aid_types">
        <item>Select...</item>
        <item>Environment</item>
        <item>Health</item>
        <item>Safety</item>
        <item>Services</item>
    </string-array>
    <string-array name="spot_report_aid_urgency_value">
        <item>Select...</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="spot_report_aid_type">Aid Type:</string>
    <string name="spot_report_aid_num"># Persons:</string>
    <string name="spot_report_aid_urgency">Urgency:</string>
    <string name="spot_report_aid_description">Describe aid needed...</string>
    <string name="spot_report_aid_reporter">Enter your name or id</string>
    <string-array name="spot_report_tracked_resource">
        <item>Select...</item>
        <item>Person</item>
        <item>Vehicle</item>
        <item>Device</item>
    </string-array>
    <string-array name="spot_report_tracked_method">
        <item>Select...</item>
        <item>GPS</item>
        <item>BlueTooth Beacon</item>
        <item>WiFi</item>
        <item>Cellular</item>
        <item>UWB</item>
        <item>N/A</item>
    </string-array>
    <string name="spot_report_track_resource_label">Tracking Resource:</string>
    <string name="spot_report_track_method_label">Tracking Method:</string>
    <string name="spot_report_track_id">Enter resource id</string>
    <string name="spot_report_track_label">Enter resource label</string>
    <string name="message_hint">Enter a message!</string>
    <string name="destination_node_hint">Enter the destination Node ID (integer)</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_language">Language</string>
    <string name="title_version">Version</string>
    <string name="title_about">About application</string>
    <string name="title_help_faq">Help / FAQ</string>
    <string name="title_discovery_rules">URL to Discovery Rules.txt</string>
    <string name="title_run_name">Run Name</string>
    <string name="msg_enter_run_name">Please enter the name for this run</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
</resources>