<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--  Server Management  -->
    <PreferenceCategory android:title="@string/server_profiles">
        <Preference
            android:key="manage_servers"
            android:title="@string/manage_servers"
            android:summary="@string/server_profile_summary"
            android:layout="@layout/preference_list_item" />
    </PreferenceCategory>


    <!-- SERVICES -->
    <PreferenceCategory android:title="@string/services">

        <SwitchPreferenceCompat
            android:id="@+id/sos_service_switch"
            android:key="sos_service"
            android:title="@string/enable_sos_service"
            android:summary="@string/summary_sos"
            android:defaultValue="true"
            android:layout="@layout/preference_switch_item" />

        <SwitchPreferenceCompat
            android:id="@+id/csapi_service_switch"
            android:key="csapi_service"
            android:title="@string/enable_csapi_service"
            android:summary="@string/summary_csapi"
            android:defaultValue="true"
            android:layout="@layout/preference_switch_item" />

        <SwitchPreferenceCompat
            android:id="@+id/discovery_service_switch"
            android:key="discovery_service"
            android:summary="@string/summary_discovery"
            android:title="@string/enable_discovery_service"
            android:defaultValue="false"
            android:layout="@layout/preference_switch_item" />

        <EditTextPreference
            android:defaultValue="https://drive.google.com/uc?export=download&amp;id="
            android:inputType="text"
            app:useSimpleSummaryProvider="true"
            android:visible="false"
            android:key="rules_link"
            android:singleLine="true"
            android:title="@string/title_discovery_rules"
            android:layout="@layout/preference_item"/>
    </PreferenceCategory>


</PreferenceScreen>