<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.sensorhub.android.MainActivity">

    <item
        android:id="@+id/action_meshtastic"
        android:orderInCategory="103"
        android:icon="@drawable/ic_message"
        android:title="@string/action_meshtastic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="120"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="104"
        android:title="@string/action_status"
        app:showAsAction="never" />

</menu>
